--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -30,6 +30,7 @@ jobs:
     - name: Check Backend
       working-directory: ./backend
       run: |
+        echo "Checking PHP syntax..."
         find . -name "*.php" -exec php -l {} \;
     
     - name: Validate Docker files
