--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "cypress": "^13.6.3",
+    "cypress-plugin-tab": "^1.0.5",
     "start-server-and-test": "^2.0.3"
   },
   "scripts": {
