--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,123 +8,145 @@ on:
     branches: [ main, master ]
 
 jobs:
-  # Job 1: Build and Test Frontend
+  # Job 1: Build, Test Frontend + Cypress (with backend)
   frontend:
     name: Frontend - Build & Test
     runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '18'
-        cache: 'npm'
-        cache-dependency-path: frontend/package-lock.json
-    
-    - name: Install dependencies
-      working-directory: ./frontend
-      run: npm ci
-    
-    - name: Run tests
-      working-directory: ./frontend
-      run: npm test -- --watchAll=false --passWithNoTests
-    
-    - name: Run Cypress E2E tests
-      working-directory: ./frontend
-      run: |
-        npm run build
-        npx serve -s build -l 3000 &
-        npx wait-on http://127.0.0.1:3000
-        npx cypress run --browser chrome
-      env:
-        CI: true
-    
-    - name: Upload Cypress screenshots
-      uses: actions/upload-artifact@v4
-      if: failure()
-      with:
-        name: cypress-screenshots
-        path: frontend/cypress/screenshots
-    
-    - name: Upload Cypress videos
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: cypress-videos
-        path: frontend/cypress/videos
-    
-    - name: Build React app
-      working-directory: ./frontend
-      run: npm run build
-    
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: frontend-build
-        path: frontend/build
 
-  # Job 2: Build and Test Backend
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.1'
+
+      - name: Install frontend dependencies
+        working-directory: ./frontend
+        run: npm ci
+
+      - name: Build frontend
+        working-directory: ./frontend
+        run: npm run build
+
+      # Start PHP backend for Cypress integration tests
+      - name: Start PHP backend
+        working-directory: ./backend
+        run: |
+          php -S localhost:8000 -t . > backend.log 2>&1 &
+          sleep 2
+
+      # Wait until backend API is ready
+      - name: Wait for backend
+        run: |
+          until curl -f http://localhost:8000/api/users.php; do
+            echo "Waiting for backend..."
+            sleep 2
+          done
+
+      # Serve frontend for Cypress
+      - name: Serve frontend
+        working-directory: ./frontend
+        run: |
+          npx serve -s build -l 3000 &
+          npx wait-on http://127.0.0.1:3000
+
+      # Run Cypress E2E tests
+      - name: Run Cypress E2E tests
+        working-directory: ./frontend
+        run: npx cypress run --browser chrome
+        env:
+          CI: true
+
+      # Upload Cypress artifacts
+      - name: Upload Cypress screenshots
+        uses: actions/upload-artifact@v4
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: frontend/cypress/screenshots
+
+      - name: Upload Cypress videos
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: cypress-videos
+          path: frontend/cypress/videos
+
+      # Upload frontend build artifacts
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-build
+          path: frontend/build
+
+  # Job 2: Backend - Lint & simple tests
   backend:
     name: Backend - Build & Test
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.1'
-    
-    - name: Validate PHP syntax
-      working-directory: ./backend
-      run: |
-        echo "Checking PHP syntax..."
-        find . -name "*.php" -exec php -l {} \;
-    
-    - name: Test API endpoint
-      working-directory: ./backend
-      run: |
-        php -S localhost:8000 &
-        sleep 2
-        curl -f http://localhost:8000/ || exit 1
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.1'
+
+      - name: Validate PHP syntax
+        working-directory: ./backend
+        run: |
+          echo "Checking PHP syntax..."
+          find . -name "*.php" -exec php -l {} \;
+
+      - name: Test API endpoint (smoke test)
+        working-directory: ./backend
+        run: |
+          php -S localhost:8000 > backend.log 2>&1 &
+          sleep 2
+          curl -f http://localhost:8000/api/users.php || exit 1
 
   # Job 3: Build Docker Images
   docker-build:
     name: Docker - Build Images
     runs-on: ubuntu-latest
     needs: [frontend, backend]
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-    
-    - name: Build Backend Image
-      uses: docker/build-push-action@v5
-      with:
-        context: ./backend
-        file: ./backend/Dockerfile
-        push: false
-        tags: php-backend:${{ github.sha }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-    
-    - name: Build Frontend Image
-      uses: docker/build-push-action@v5
-      with:
-        context: ./frontend
-        file: ./frontend/Dockerfile
-        push: false
-        tags: react-frontend:${{ github.sha }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Backend Image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend
+          file: ./backend/Dockerfile
+          push: false
+          tags: php-backend:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Build Frontend Image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          file: ./frontend/Dockerfile
+          push: false
+          tags: react-frontend:${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   # Job 4: Deploy (only on main branch)
   deploy:
@@ -132,16 +154,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: [docker-build]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Deploy notification
-      run: |
-        echo "Deployment would happen here"
-        echo "For local Kubernetes, you would:"
-        echo "1. Push images to container registry"
-        echo "2. Update Kubernetes manifests"
-        echo "3. Apply kubectl commands"
-        echo "See README-CICD.md for setup instructions"
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Deploy notification
+        run: |
+          echo "Deployment would happen here"
+          echo "For local Kubernetes, you would:"
+          echo "1. Push images to container registry"
+          echo "2. Update Kubernetes manifests"
+          echo "3. Apply kubectl commands"
+          echo "See README-CICD.md for setup instructions"
